[gd_scene load_steps=7 format=3 uid="uid://crybhglho6cys"]

[ext_resource type="Script" path="res://main_copy.gd" id="1_rlp23"]
[ext_resource type="Texture2D" uid="uid://dt3cxl5jr2fx1" path="res://assets/little_planet.png" id="2_p1s5d"]
[ext_resource type="Texture2D" uid="uid://u87ed48gs3qj" path="res://assets/double_arrow.png" id="3_hxl7e"]
[ext_resource type="Texture2D" uid="uid://blk31pn2tayx0" path="res://assets/square_1000.png" id="4_wv136"]
[ext_resource type="Texture2D" uid="uid://cy2v0ifiksftc" path="res://assets/square_900.png" id="5_og560"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_56wr6"]
size = Vector2(48, 48)

[node name="Main_test" type="Node2D"]
script = ExtResource("1_rlp23")

[node name="player" type="CharacterBody2D" parent="."]
position = Vector2(500, 500)

[node name="square_one" type="CollisionShape2D" parent="player"]
position = Vector2(300, 0)
shape = SubResource("RectangleShape2D_56wr6")

[node name="square_img_one" type="Sprite2D" parent="player/square_one"]
z_index = -1
texture = ExtResource("2_p1s5d")

[node name="square_two" type="CollisionShape2D" parent="player"]
position = Vector2(300, 0)
shape = SubResource("RectangleShape2D_56wr6")

[node name="square_img_two" type="Sprite2D" parent="player/square_two"]
texture = ExtResource("2_p1s5d")

[node name="counter" type="Node2D" parent="."]
position = Vector2(500, 500)

[node name="square_one" type="Sprite2D" parent="counter"]
position = Vector2(-150, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_p1s5d")

[node name="square_two" type="Sprite2D" parent="counter"]
position = Vector2(-150, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_p1s5d")

[node name="cardinal" type="Sprite2D" parent="."]
position = Vector2(500, 500)

[node name="vertical_arrow" type="Sprite2D" parent="cardinal"]
rotation = -3.14159
texture = ExtResource("3_hxl7e")

[node name="horizontal_arrow" type="Sprite2D" parent="cardinal"]
rotation = -1.5708
texture = ExtResource("3_hxl7e")

[node name="ordinal" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.196078)
position = Vector2(500, 500)

[node name="one_five" type="Sprite2D" parent="ordinal"]
rotation = 0.785398
texture = ExtResource("3_hxl7e")

[node name="three_seven" type="Sprite2D" parent="ordinal"]
rotation = -0.785398
texture = ExtResource("3_hxl7e")

[node name="outer_ring" type="Sprite2D" parent="."]
position = Vector2(500, 500)
scale = Vector2(0.6, 0.6)

[node name="1000" type="Sprite2D" parent="outer_ring"]
texture = ExtResource("4_wv136")

[node name="900" type="Sprite2D" parent="outer_ring"]
texture = ExtResource("5_og560")

[node name="outer_ring2" type="Sprite2D" parent="."]
position = Vector2(500, 500)
scale = Vector2(0.6, 0.6)

[node name="1000" type="Sprite2D" parent="outer_ring2"]
texture = ExtResource("4_wv136")

[node name="900" type="Sprite2D" parent="outer_ring2"]
texture = ExtResource("5_og560")
